objects/SLCA2__CA_CreatingField__c.object
<CustomObject>
    <fields>
        <fullName>SLCA2__CA_Calendar__c</fullName>
        <label>CA_Calendar</label>
        <referenceTo>SLCA2__CA_Calendar__c</referenceTo>
        <relationshipLabel>CA_CreatingFields</relationshipLabel>
        <relationshipName>CA_CreatingFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldLabel__c</fullName>
        <label>fieldLabel</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__fieldOption__c</fullName>
        <label>fieldOption</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLCA2__isRequiredField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequiredField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLCA2__order__c</fullName>
        <label>order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CA_CreatingField</label>
    <nameField>
        <label>CA_CreatingFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_CreatingFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>